this is not possible in jdk 8 yet